Updating imagines and logo for entire project

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <nav>
       <div class="container">
         <a id="logo-link" href="index.html"
-          ><img src="https://www.itschool.ro/img/logo-white.png" alt="logo"
+          ><img src="./pictures/itschool-logo.png" alt="logo"
         /></a>
         <span class="hamburger-icon material-icons"> menu </span>
-        <input type="checkbox" />
+        <!-- <input type="checkbox" /> -->
         <ul class="menu-primary">
           <li><a href="pages/courses.html">Cursuri Online</a></li>
           <li class="about-us">
@@ -57,20 +57,10 @@
           <p>În acceleratorul de cariere în <span>Web Development</span></p>
           <p>
             Cursuri IT pentru începători cu certificare
+            <img src="./pictures//adobe-logo-2.jpg" alt="adobe-logo" />
+            <img src="./pictures/microsoft.jpg" alt="microsoft-logo" />
             <img
-              src="https://www.itschool.ro/temp/L-micro.png"
-              alt="microsoft-logo"
-            />
-            <img
-              src="https://www.itschool.ro/temp/L-adobe.png"
-              alt="adobe-logo"
-            />
-            <img
-              src="https://www.itschool.ro/temp/L-apple.png"
-              alt="apple-logo"
-            />
-            <img
-              src="https://www.itschool.ro/temp/siglame.png"
+              src="./pictures/ministerul_educatiei_nationale.png"
               alt="education-minister-logo"
             />
           </p>
@@ -230,40 +220,22 @@
           </p>
           <div class="img-container">
             <div class="img-packer">
-              <img
-                src="https://www.itschool.ro/temp/itschool-3.jpg"
-                alt="img-it-place"
-              />
+              <img src="./pictures/img_1.jpg" alt="img-it-place" />
             </div>
             <div class="img-packer">
-              <img
-                src="https://www.itschool.ro/temp/web3.jpg"
-                alt="img-it-place"
-              />
+              <img src="./pictures/img_2.jpg" alt="img-it-place" />
             </div>
             <div class="img-packer">
-              <img
-                src="https://www.itschool.ro/temp/itschool-1.jpg"
-                alt="img-it-place"
-              />
+              <img src="./pictures/img_3.jpg" alt="img-it-place" />
             </div>
             <div class="img-packer">
-              <img
-                src="https://www.itschool.ro/temp/itschool-6.jpg"
-                alt="img-it-place"
-              />
+              <img src="./pictures/img_4.jpg" alt="img-it-place" />
             </div>
             <div class="img-packer">
-              <img
-                src="https://www.itschool.ro/temp/itschool-5.jpg"
-                alt="img-it-place"
-              />
+              <img src="./pictures/img_5.jpg" alt="img-it-place" />
             </div>
             <div class="img-packer">
-              <img
-                src="https://www.itschool.ro/temp/itschool-2.jpg"
-                alt="img-it-place"
-              />
+              <img src="./pictures/img_6.jpg" alt="img-it-place" />
             </div>
           </div>
         </div>
@@ -275,76 +247,28 @@
           <h2>Parteneri</h2>
           <div class="logo-container">
             <div class="img-packer">
-              <img
-                src="https://www.itschool.ro/img/parteneri/homepage/toluna.png"
-                alt="toluna-logo"
-              />
+              <img src="./pictures/nokia.jpg" alt="amdaris-logo" />
             </div>
             <div class="img-packer">
-              <img
-                src="https://www.itschool.ro/img/parteneri/homepage/123formbuilder.png"
-                alt="toluna-logo"
-              />
+              <img src="./pictures/atoss.jpg" alt="atoss-logo" />
             </div>
             <div class="img-packer">
-              <img
-                src="https://www.itschool.ro/img/parteneri/homepage/nagarro.png"
-                alt="toluna-logo"
-              />
+              <img src="./pictures/insites.jpg" alt="insites-logo" />
             </div>
             <div class="img-packer">
-              <img
-                src="https://www.itschool.ro/img/parteneri/homepage/sv.png"
-                alt="toluna-logo"
-              />
+              <img src="./pictures/unified-post.jpg" alt="unified-logo" />
             </div>
             <div class="img-packer">
-              <img
-                src="https://www.itschool.ro/img/parteneri/homepage/dreamproduction.png"
-                alt="toluna-logo"
-              />
+              <img src="./pictures/cognizant.jpg" alt="cognizant-logo" />
             </div>
             <div class="img-packer">
-              <img
-                src="https://www.itschool.ro/img/parteneri/homepage/ness.png"
-                alt="toluna-logo"
-              />
+              <img src="./pictures/fortech.jpg" alt="fortech-logo" />
             </div>
             <div class="img-packer">
-              <img
-                src="https://www.itschool.ro/img/parteneri/homepage/instapage.png"
-                alt="toluna-logo"
-              />
+              <img src="./pictures/enovatika.jpg" alt="enovatika-logo" />
             </div>
             <div class="img-packer">
-              <img
-                src="https://www.itschool.ro/img/parteneri/homepage/amdaris.png"
-                alt="toluna-logo"
-              />
-            </div>
-            <div class="img-packer">
-              <img
-                src="https://www.itschool.ro/img/parteneri/homepage/fortech.png"
-                alt="toluna-logo"
-              />
-            </div>
-            <div class="img-packer">
-              <img
-                src="https://www.itschool.ro/img/parteneri/homepage/visma.png"
-                alt="toluna-logo"
-              />
-            </div>
-            <div class="img-packer">
-              <img
-                src="https://www.itschool.ro/img/parteneri/homepage/mobiversal.png"
-                alt="toluna-logo"
-              />
-            </div>
-            <div class="img-packer">
-              <img
-                src="https://www.itschool.ro/img/parteneri/homepage/imobiliarert.png"
-                alt="toluna-logo"
-              />
+              <img src="./pictures//toluna.jpg" alt="toluna-logo" />
             </div>
           </div>
         </div>
@@ -388,26 +312,14 @@
             <h3>Certificări</h3>
             <ul>
               <li>
-                <img
-                  src="https://www.itschool.ro/temp/L-micro.png"
-                  alt="microsoft-logo"
-                />
+                <img src="./pictures//adobe-logo-2.jpg" alt="adobe-logo" />
+              </li>
+              <li>
+                <img src="./pictures/microsoft.jpg" alt="microsoft-logo" />
               </li>
               <li>
                 <img
-                  src="https://www.itschool.ro/temp/L-adobe.png"
-                  alt="adobe-logo"
-                />
-              </li>
-              <li>
-                <img
-                  src="https://www.itschool.ro/temp/L-apple.png"
-                  alt="apple-logo"
-                />
-              </li>
-              <li>
-                <img
-                  src="https://www.itschool.ro/temp/siglame.png"
+                  src="./pictures//ministerul_educatiei_nationale.png"
                   alt="education-minister-logo"
                 />
               </li>
@@ -417,5 +329,6 @@
         <p>IT School România © 2021. Toate drepturile rezervate.</p>
       </div>
     </footer>
+    <script src="./js/index.js"></script>
   </body>
 </html>
