--- a/pages/contact.html
+++ b/pages/contact.html
@@ -28,7 +28,7 @@
     <nav>
       <div class="container">
         <a id="logo-link" href="../index.html"
-          ><img src="https://www.itschool.ro/img/logo-white.png" alt="logo"
+          ><img src="../pictures/itschool-logo.png" alt="logo"
         /></a>
         <span class="hamburger-icon material-icons"> menu </span>
         <input type="checkbox" />
@@ -158,12 +158,12 @@
               </div>
             </div>
             <!-- Map -->
-            <div class="map">
+            <!-- <div class="map">
               <img
                 src="https://www.itschool.ro/temp/locatii-itschool-romania.png"
                 alt="location-map"
               />
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
@@ -206,26 +206,14 @@
             <h3>Certificări</h3>
             <ul>
               <li>
-                <img
-                  src="https://www.itschool.ro/temp/L-micro.png"
-                  alt="microsoft-logo"
-                />
+                <img src="../pictures//adobe-logo-2.jpg" alt="adobe-logo" />
+              </li>
+              <li>
+                <img src="../pictures/microsoft.jpg" alt="microsoft-logo" />
               </li>
               <li>
                 <img
-                  src="https://www.itschool.ro/temp/L-adobe.png"
-                  alt="adobe-logo"
-                />
-              </li>
-              <li>
-                <img
-                  src="https://www.itschool.ro/temp/L-apple.png"
-                  alt="apple-logo"
-                />
-              </li>
-              <li>
-                <img
-                  src="https://www.itschool.ro/temp/siglame.png"
+                  src="../pictures//ministerul_educatiei_nationale.png"
                   alt="education-minister-logo"
                 />
               </li>
@@ -235,5 +223,6 @@
         <p>IT School România © 2021. Toate drepturile rezervate.</p>
       </div>
     </footer>
+    <script src="../js/index.js"></script>
   </body>
 </html>
